--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -15,7 +15,7 @@
     {% endfor %}
   {% endif %}
 
-  <form action="{% url login %}" method="post" id="login-form">{% csrf_token %}
+  <form action="{% url 'login' %}" method="post" id="login-form">{% csrf_token %}
     <div>
       {{ form.username.errors }}
       <label for="id_username" class="required">Username</label>
